--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -15,15 +15,15 @@ li {
 .btn {
     cursor: pointer;
     display: block;
-    width: 100px;
     height: 36px;
-    background-color: #BBC6C8;
+    background-color: #bc7fbb;
     padding: 5px;
     font-size: 20px;
     border-color: transparent;
     border-radius: 5px;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, color 0.3s;
 }
 button:hover {
-    background-color: #5BA199;
+    background-color: #6f4785;
+    color: #d8cce7
 }
