--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -3,4 +3,17 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    font-size: 20px;
+}
+
+.input {
+    padding: 3px;
+    border: 1px solid #bc7fbb;
+    border-radius: 5px;
+    font-size: 20px;
+}
+.input:focus {
+    border-color: #6f4785;
+    outline-color: #6f4785;
+    
 }
