--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,23 @@
 
 body {
   margin: 0;
+  padding: 40px;
   font-family: 'Oxygen', sans-serif;
   font-weight: 300;
   font-size: 20px;
-  background-color: #E5E3E4;
+  color: #283a22;
+  background-color: #65a293;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+p{
+  margin: 0;
 }
 
 h1 {
@@ -20,4 +26,20 @@ h1 {
 }
 li {
   list-style: none;
+}
+button {
+    cursor: pointer;
+    display: block;
+    width: 100px;
+    height: 36px;
+    background-color: #bc7fbb;
+    padding: 5px;
+    font-size: 20px;
+    border-color: transparent;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+button:hover {
+    background-color: #6f4785;
+    color: #d8cce7
 }
